renaming from whoare to wasd
whoare suffers from an ambiguous pronunciation.

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,10 +1,10 @@
-whoare (1.1) precise; urgency=low
+wasd (1.1) precise; urgency=low
 
-  * Support for system-wide config (/etc/spotify/whoare/)
+  * Support for system-wide config (/etc/spotify/wasd/)
 
  -- Pierre Carrier <pierre@spotify.com>  Tue, 04 Sep 2012 15:38:20 +0200
 
-whoare (1.0-1) unstable; urgency=low
+wasd (1.0-1) unstable; urgency=low
 
   * Initial release
 
