--- a/debian/changelog
+++ b/debian/changelog
@@ -1,11 +1,5 @@
-wasd (1.1) precise; urgency=low
+wasd (2.0) unstable; urgency=low
 
-  * Support for system-wide config (/etc/spotify/wasd/)
+  * Latest release.
 
  -- Pierre Carrier <pierre@spotify.com>  Tue, 04 Sep 2012 15:38:20 +0200
-
-wasd (1.0-1) unstable; urgency=low
-
-  * Initial release
-
- -- Pierre Carrier <pierre@spotify.com>  Wed, 01 Aug 2012 01:06:34 +0000
